fixed bg on mobile

--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
+  background-color: black;
+}
+
+html, body {
+  height: 100vh;
+}
+
+html {
+  background: black no-repeat center center fixed;
+  background-size: cover;
+
 }
 
 *::-webkit-scrollbar {
